# Webwatcher_Agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE_V1.md  DEFAULTS.md
src/webwatcher/: app.py  main.py
src/webwatcher/api/: router.py  routes_changes.py  routes_company.py  routes_monitor.py  schemas.py
src/webwatcher/core/: config.py  database.py  logger.py
src/webwatcher/crawler/: crawler_controller.py  fetcher.py  ir_discovery.py
src/webwatcher/db/: bootstrap.py  init_db.py  models.py
src/webwatcher/financial/: canonical_map.py  financial_extractor.py  unit_normalizer.py
src/webwatcher/intelligence/: change_detector.py  confidence_engine.py  materiality_engine.py
src/webwatcher/llm/: llm_client.py  llm_financial_validator.py  llm_section_classifier.py
src/webwatcher/normalization/: html_normalizer.py  url_utils.py
src/webwatcher/observability/: metrics.py
src/webwatcher/orchestration/: locks.py  monitor_worker.py  queue.py  scheduler.py
src/webwatcher/pdf/: pdf_monitor.py  pdf_parser.py
src/webwatcher/security/: security_utils.py
src/webwatcher/storage/: snapshot_manager.py  storage_service.py
src/webwatcher/ui/: streamlit_app.py
tests/integration/: test_api_routes.py  test_financial_change_pipeline.py  test_snapshot_pipeline.py
tests/unit/: test_canonical_map.py  test_change_detector.py  test_config_settings.py  test_financial_extractor.py  test_html_normalizer.py  test_locks.py  test_materiality_confidence.py  test_unit_normalizer.py
