[project]
name = "webwatcher-agent"
version = "0.1.0"
description = "Financial IR Monitoring & Intelligence System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "beautifulsoup4>=4.12.3",
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "lxml>=5.3.0",
  "openai>=1.54.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.0.1",
  "redis>=5.1.1",
  "sqlalchemy>=2.0.36",
  "streamlit>=1.40.0",
  "tenacity>=9.0.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP017", "UP042"]
